# cgan-monet-style-kaggle

./: .env.example  .gitignore  README.md  REPORT.md  Report.ipynb  WANDB_INTEGRATION.md  app.py  configs.py  create_submission.py  dataset.py  dcgan-artist.ipynb  dcgan.py  debug_dataset.py  device.py  discriminator.py  eda.py  generate_submission_images.py  generator.py  logger.py  main.ipynb  main.py  monet_wandb.py  pyproject.toml  utils.py  visualize_results.py
report_material/eda/: dataset_stats.txt  eda_summary_report.md  pixel_stats.txt  quality_stats.txt
