[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cgan-monet-style"
version = "0.1.0"
description = "Conditional GAN for Monet-style painting generation - Kaggle GAN Getting Started competition"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DevMarkPro"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]